<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">helloworld</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="testButton">Hello world!</string>
    
    
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    
     <string name="textview">mytextview</string>
    
    
    
    <string name="checkt">testingcheck</string>

</resources>
